fix: dark mode toggle

--- a/src/components/DarkModeToggle/darkModeToggle.module.css
+++ b/src/components/DarkModeToggle/darkModeToggle.module.css
@@ -1,23 +1,24 @@
 .container {
-  width: 42px;
-  height: 24px;
+  width: 45px;
+  height: 26px;
   border: 1.5px solid #3963bc;
   border-radius: 30px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 2px;
+  padding: 0px 5px;
   position: relative;
   cursor: pointer;
 }
 
 .icon {
-  font-size: 12px;
+  font-size: 10px;
+  line-height: 10px;
 }
 
 .ball {
-  width: 15px;
-  height: 15px;
+  width: 18px;
+  height: 18px;
   background-color: #4881fb;
   border-radius: 50%;
   position: absolute;
